--- a/hugoSite/config.toml
+++ b/hugoSite/config.toml
@@ -27,7 +27,7 @@ defaultTheme = "light"
         enabled = true
         title = "Ayah Al-Ramahi"
         subtitle = "Engineer | Learner | Dreamer"
-        imageUrl = "/ar.png"
+        imageUrl = "/ar-500.png"
         imageTitle = "logo"
         imageWidth = 120.0
         imageHeight = 120.0
