Updated LinkedIn link

--- a/hugoSite/config.toml
+++ b/hugoSite/config.toml
@@ -38,7 +38,7 @@ defaultTheme = "light"
 
     [[params.socialIcons]]
         name = "LinkedIn"
-        url = "https://linkedin.com/ayahRamahi"
+        url = "https://www.linkedin.com/in/ayah-ramahi/"
 
     [[params.socialIcons]]
         name = "Email"
